# flatbuffers

./: .gitignore  .ocamlinit  BUILD  CLAUDE.md  CMakeLists.txt  Makefile  azure-pipelines.yml  dune-project  flatbuffers-ocaml-build.md  flatbuffers-tools.opam  flatbuffers.opam  monsterdata.ml  ocaml-submodule-migration.md  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/features/claude-code/: devcontainer-feature.json  install.sh
.github/workflows/: build.yml  ocaml-build.yml  ocaml-images.yml  opam-install.yml
.github/workflows/actions/devcontainer/: action.yml
include/flatbuffers/: idl.h
ocaml/: .gitignore  .ocamlinit  flatBuffers.ml  flatBuffers_priv.ml  flatBuffers_test.ml  flatbuffers_priv.ml  js_dataview.mli  monster.test.ml  monster_test.test.ml  test.sh
ocaml/dev/: monster.test.ml  monster_test.test.ml  monsterdata.ml  test.sh  upstream.sh
ocaml/jsoo/: dune  test_jsoo.ml
ocaml/jsoo/flatbuffers/: dune  js_dataview.ml
ocaml/lib/: builder.ml  builder.mli  dune  primitives.ml  primitives.mli  read.ml  read.mli  runtime.ml  runtime_intf.ml
ocaml/melange/: dune  test_melange.ml
ocaml/melange/bigstringaf/: bigstringaf.ml
ocaml/melange/flatbuffers/: dune  js_dataview.ml
ocaml/test/: arrays_test.ml  casing_test.ml  dune  fixtures.ml  main_test.ml  monster_test.ml  more_defaults_test.ml  offset64_test.ml  string_union_test.ml
patches/: ocaml-integration.patch
samples/: monster_generated.ml  ocaml_sample.sh  sample_binary.ml
src/: bfbs_gen_ocaml.cpp  flatc_main.cpp  idl_gen_ocaml.cpp  idl_parser.cpp
tests/: OCamlTest.sh  OcamlTest.sh  monster_extra_generated.ml  monster_test_generated.ml  native_type_test_generated.ml
