opam-version: "2.0"
version: "0.1"
synopsis: "Flatc code generator with OCaml backend"
description:
  "Builds the flatc code generator with the OCaml code generation backend from source. Requires cmake and a C++ compiler."
maintainer: ["Vladimir Silyaev <thecbah@gmail.com>"]
authors: ["Vladimir Silyaev"]
license: "Apache-2.0"
tags: ["flatbuffers" "serialization" "codegen" "ocaml"]
homepage: "https://github.com/TheCBaH/flatbuffers"
bug-reports: "https://github.com/TheCBaH/flatbuffers/issues"
dev-repo: "git+https://github.com/TheCBaH/flatbuffers.git"
extra-source "flatbuffers.tar.gz" {
  src:
    "https://github.com/google/flatbuffers/archive/38df29380a97d8fa961eeef116b275eb3e9a68e7.tar.gz"
  checksum: [
    "sha256=7a69d9d301805ad93e9225816c0bda80aba63ef84a2861b24d9909fd7e342549"
  ]
}
depexts: [
  ["cmake" "g++"] {os-family = "debian"}
  ["cmake" "gcc-c++"] {os-family = "fedora"}
  ["cmake"] {os = "macos"}
]
build: [
  [make "flatc"]
]
install: [
  ["install" "-m" "755" "flatc.ocaml" "%{bin}%/flatc.ocaml"]
]
