(copy_files
 (files %{workspace_root}/ocaml/lib/builder.{ml,mli}))

(copy_files
 (files %{workspace_root}/ocaml/lib/flatbuffers.ml))

(copy_files
 (files %{workspace_root}/ocaml/lib/read.{ml,mli}))

(copy_files
 (files %{workspace_root}/ocaml/lib/runtime_intf.ml))

(copy_files
 (files %{workspace_root}/ocaml/lib/runtime.mli))

(copy_files
 (files %{workspace_root}/ocaml/lib/util.{ml,mli}))

(copy_files
 (files %{workspace_root}/ocaml/js_dataview.mli))

(rule
 (target primitives.ml)
 (deps
  (:src %{workspace_root}/ocaml/lib/primitives.ml))
 (action
  (run %{bin:cppo} -D JSDATAVIEW -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(rule
 (target primitives.mli)
 (deps
  (:src %{workspace_root}/ocaml/lib/primitives.mli))
 (action
  (run %{bin:cppo} -D JSDATAVIEW -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(rule
 (target runtime.ml)
 (deps
  (:src %{workspace_root}/ocaml/lib/runtime.ml))
 (action
  (run %{bin:cppo} -D JSDATAVIEW -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(library
 (name flatbuffers_jsoo)
 (wrapped false)
 (libraries js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx)))
