(copy_files
 (files ../../lib/builder.{ml,mli}))

(copy_files
 (files ../../lib/flatbuffers.ml))

(copy_files
 (files ../../lib/read.{ml,mli}))

(copy_files
 (files ../../lib/runtime_intf.ml))

(copy_files
 (files ../../lib/runtime.mli))

(copy_files
 (files ../../lib/util.{ml,mli}))

(rule
 (target primitives.ml)
 (deps
  (:src ../../lib/primitives.ml))
 (action
  (run %{bin:cppo} -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(rule
 (target primitives.mli)
 (deps
  (:src ../../lib/primitives.mli))
 (action
  (run %{bin:cppo} -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(rule
 (target runtime.ml)
 (deps
  (:src ../../lib/runtime.ml))
 (action
  (run %{bin:cppo} -I . -V OCAML:%{ocaml_version} %{src} -o %{target})))

(library
 (name flatbuffers_mel)
 (wrapped false)
 (modes melange))
